--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!<!DOCTYPE>
-<html>
-    <head>
-        <title>Welcome to OKLABS</title>
-    </head>
-    <body>
-        <h1>OKLABS Fullstack Development</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Welcome to OKLABS</title>
+</head>
+<body>
+    <h1>OKLABS Fullstack Developement</h1>
+    <img src="./img/1.png">
+</body>
 </html>
